# auto_self_train

./: .gitignore  README.md  attention.py  autoresearch_hparam.md  dataset_process.py  hparam_config.yaml  pyproject.toml  requirements.txt  results.tsv  rmsnorm.py  tokenizer.json  tokenizer.py  tokenizer_mapping.json  train.py  transformer_block.py
