# ============================================================
# pyproject.toml — uv 完整解决方案
# 使用方式：
#   1. 安装 uv：  curl -LsSf https://astral.sh/uv/install.sh | sh
#   2. 创建环境：  uv venv --python 3.11
#   3. 激活环境：  source .venv/bin/activate
#   4. 安装依赖：  uv sync
#
# CUDA 版本说明：
#   你的 CUDA 是 12.8，PyTorch 官方不单独发布 cu128 wheel。
#   cu124 wheel 可在 CUDA 12.8 上正常运行（向下兼容）。
#
# 网络说明：
#   默认源改为清华镜像，解决国内服务器访问 pypi.org 超时的问题。
#   torch/torchvision/torchaudio 仍从 PyTorch 官方源拉（explicit 模式），
#   其余所有包走清华镜像。
# ============================================================

[project]
name = "sft-training"
version = "0.1.0"
description = "SFT training pipeline with vLLM evaluation"
requires-python = "==3.11.*"

dependencies = [
    # PyTorch 生态 — 显式指定从 pytorch-cu124 源拉，三者版本必须对齐
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",

    # 推理引擎
    "vllm==0.8.5.post1",

    # HuggingFace 生态
    # transformers <5.0 是硬性上限，vllm 0.8.x 不兼容 transformers 5.x
    "transformers==4.57.6",
    "tokenizers==0.22.2",

    # 训练工具
    "trl==0.15.2",
    "einops==0.8.2",

    # 实验追踪
    "wandb>=0.25.0",

    # 数据工具
    "xxhash==3.5.0",

    # 数学验证（reward_fn 依赖）
    "latex2sympy2-extended==1.11.0",
    "math-verify==0.9.0",
    "pylatexenc==2.10",

    # API 调用
    "openai==1.57.4",

    # 数值计算
    "numpy>=1.26.0,<3.0.0",
]

# ============================================================
# uv 索引配置
# ============================================================

# 清华镜像作为默认源（国内服务器首选）
# 如果清华镜像也慢，可换备选：
#   阿里云： https://mirrors.aliyun.com/pypi/simple
#   腾讯云： https://mirrors.cloud.tencent.com/pypi/simple
#   中科大： https://pypi.mirrors.ustc.edu.cn/simple
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

# PyTorch cu124 源设为 explicit，只有被显式标注的包才从这里拉
# CUDA 12.8 完全兼容 cu124 wheel，官方不单独发 cu128
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# ============================================================
# torch / torchaudio / torchvision 显式绑定到 pytorch-cu124 源
# ============================================================
[tool.uv.sources]
torch       = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio  = { index = "pytorch-cu124" }

# ============================================================
# 开发依赖（可选）
# ============================================================
[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]