# ============================================================
# pyproject.toml — uv 解决方案
# 使用方式：
#   1. 安装 uv：  irm https://astral.sh/uv/install.ps1 | iex
#   2. 创建环境：  uv venv --python 3.11
#   3. 激活环境：  .venv\Scripts\activate
#   4. 安装依赖：  uv sync
#
# CUDA 版本说明：
#   CUDA 12.8 完全兼容 cu124 wheel，官方不单独发 cu128
#
# 网络说明：
#   默认源改为清华镜像，解决国内访问 pypi.org 超时问题。
#   torch 从 PyTorch 官方源拉（explicit 模式），其余走清华镜像。
# ============================================================

[project]
name = "transformer-lm"
version = "0.1.0"
description = "Transformer language model training from scratch"
requires-python = "==3.11.*"

dependencies = [
    # PyTorch — 从 pytorch-cu124 源拉
    "torch==2.6.0",

    # 数值计算
    "numpy>=1.26.0,<3.0.0",

    # 实验追踪
    "wandb>=0.19.0",

    # Tokenizer
    "tokenizers>=0.21.0",

    # 张量操作
    "einops>=0.8.0",
]

# ============================================================
# uv 索引配置
# ============================================================

# 清华镜像作为默认源
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

# PyTorch cu124 源设为 explicit
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# ============================================================
# torch 显式绑定到 pytorch-cu124 源
# ============================================================
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

# ============================================================
# 开发依赖（可选）
# ============================================================
[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
